Change newsletter send to daily at 8am EST (saves Netlify credits)

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,6 @@
 [functions]
   node_bundler = "esbuild"
 
-# Newsletter scheduled function runs hourly
+# Newsletter scheduled function runs daily at 8am EST
 [functions."newsletter-send"]
-  schedule = "0 * * * *"
+  schedule = "0 13 * * *"
